SUBDIRS = gtk

bin_PROGRAMS = ayttm

ayttm_SOURCES = main.c contactlist.c edit_local_accounts.c service.c status.c \
	account.c info_window.c chat_window.c util.c add_contact_window.c \
	edit_contact_window.c edit_account_window.c  sound.c dialog.c \
	prefs.c away_window.c browser.c message_parse.c \
	activity_bar.C \
	chat_room.c value_pair.c edit_group_window.c log_window.c \
	trigger.c console_session.c input_list.c nomodule.c \
	plugin_api.c plugin.c file_select.c contact_actions.c \
	smileys.c help_menu.c crash.c account_parser.y account_scanner.l \
	contact_parser.y contact_scanner.l llist.c mem_util.c \
	offline_queue_mgmt.c tcp_util.c image_window.c action.c

noinst_HEADERS = account.h service.h contact.h gtk_globals.h globals.h \
	status.h info_window.h chat_window.h util.h add_contact_window.h \
	sound.h dialog.h prefs.h away_window.h\
	message_parse.h help_menu.h chat_room.h value_pair.h log_window.h \
	info_window.h log_window.h trigger.h console_session.h \
	browser.h input_list.h plugin.h plugin_api.h debug.h \
	nomodule.h file_select.h contact_actions.h activity_bar.h \
	smileys.h intl.h account_parser.h contact_parser.h crash.h \
	externs.h llist.h mem_util.h offline_queue_mgmt.h tcp_util.h \
	image_window.h action.h

EXTRA_DIST = 

AM_CFLAGS = $(EB_CFLAGS) -I$(top_srcdir) -I$(top_srcdir)/libproxy \
	$(GNOME_INCLUDEDIR)
AM_CXXFLAGS = $(AM_CFLAGS)
LIBS = @LIBS@ $(EB_LIBS) -lproxy $(GNOME_LIBDIR) $(GNOME_APPLETS_LIBS)
ayttm_LDFLAGS = $(EB_LDFLAGS) -L$(top_srcdir)/libproxy
CLEANFILES = @CLEANFILES@ defaults.h
localedir = $(datadir)/locale
DEFS = @DEFS@ -DLOCALEDIR=\"$(localedir)\" -D_REENTRANT

ayttm_LDADD = \
	gtk/libayttmgtk.la \
	$(INTLLIBS) \
	$(GTK_LIBS) \
	$(GDK_PIXBUF_LIBS) \
	@LEXLIB@

bin_SCRIPTS = 

defaults.h: Makefile
	@rm -f defaults.h >/dev/null 2>&1;
	@echo "/* This file is automatically generated.  Any changes will be overwritten. */" > defaults.h;
	@echo "#ifndef __DEFAULTS_H__" >> defaults.h;
	@echo "#define __DEFAULTS_H__" >> defaults.h;
	@echo "#ifdef __MINGW32__" >> defaults.h;
	@echo \#define BuddyArriveDefault \"\\\\BuddyArrive.au\" >> defaults.h;
	@echo \#define BuddyLeaveDefault \"\\\\BuddyLeave.au\" >> defaults.h;
	@echo \#define SendDefault \"\\\\Send.au\" >> defaults.h;
	@echo \#define ReceiveDefault \"\\\\Receive.au\" >> defaults.h;
	@echo \#define SpeechProgramDefault \"\" >> defaults.h;
	@echo \#define MODULE_DIR \"\\\\modules\" >> defaults.h;
	@echo \#define AYTTMRC  \"\\\\@PACKAGE@rc\" >> defaults.h;
	@echo "#else" >> defaults.h;
	@echo \#define MODULE_DIR \"${libdir}/@PACKAGE@\" >> defaults.h;
	@echo \#define AYTTMRC  \"${sysconfdir}/@PACKAGE@rc\" >> defaults.h;
	@echo "#endif" >> defaults.h;
	@echo "#endif" >> defaults.h;

prefs.c plugin.c: defaults.h

account_parser.c account_parser.h: account_parser.y
	$(YACC) $(AM_LFLAGS) $(LFLAGS) -d -p account $< && \
		mv y.tab.c $*.c && \
		mv y.tab.h $*.h

contact_parser.c contact_parser.h: contact_parser.y
	$(YACC) $(AM_LFLAGS) $(LFLAGS) -d -p contact $< && \
		mv y.tab.c $*.c && \
		mv y.tab.h $*.h

account_scanner.c: account_scanner.l
	$(LEX) $(AM_LFLAGS) $(LFLAGS) -it -Paccount $< > $@

contact_scanner.c: contact_scanner.l
	$(LEX) $(AM_LFLAGS) $(LFLAGS) -it -Pcontact $< > $@
