SUBDIRS = gtk

bin_PROGRAMS = ayttm

if MINGW32
WIN32_SRC = ayttm.rc exchndl2.cxx
WIN32_LD = -mwindows -Wl,--export-all-symbols -Wl,--out-implib,libayttm.a
WIN32_LIBS = -lws2_32 -lwinmm
endif
# for building on windows
EXTRA_DIST = ayttm.rc exchndl2.cxx

ayttm_SOURCES = main.c contactlist.c edit_local_accounts.c service.c status.c \
	account.c info_window.c chat_window.c util.c add_contact_window.c \
	edit_contact_window.c edit_account_window.c  sound.c dialog.c \
	prefs.c away_window.c browser.c message_parse.c \
	activity_bar.C spellcheck.C video.c usercount.c \
	conversation.c value_pair.c edit_group_window.c logs.c \
	trigger.c console_session.c input_list.c nomodule.c \
	plugin_api.c plugin.c file_select.c contact_actions.c \
	smileys.c help_menu.c crash.c account_parser.y account_scanner.l \
	contact_parser.y contact_scanner.l llist.c mem_util.c \
	offline_queue_mgmt.c image_window.c action.c about.c \
	messages.c edit_list_window.c flash_window_title.c icons.c \
	charconv.c ayttm_tray.c auto_complete.c $(WIN32_SRC)

noinst_HEADERS = account.h service.h contact.h gtk_globals.h globals.h \
	status.h info_window.h chat_window.h util.h add_contact_window.h \
	sound.h dialog.h prefs.h away_window.h spellcheck.h \
	message_parse.h help_menu.h conversation.h value_pair.h logs.h \
	info_window.h trigger.h console_session.h video.h icons.h \
	browser.h input_list.h plugin.h plugin_api.h debug.h \
	nomodule.h file_select.h contact_actions.h activity_bar.h \
	smileys.h intl.h account_parser.h contact_parser.h crash.h \
	externs.h llist.h mem_util.h offline_queue_mgmt.h \
	image_window.h action.h about.h messages.h \
	edit_local_accounts.h  platform_defs.h edit_list_window.h \
	ui_about_window.h ui_file_selection_dlg.h ui_log_window.h \
	ui_prefs_window.h \
	charconv.h ayttm_tray.h auto_complete.h

AM_CFLAGS = $(EB_CFLAGS) -I$(top_srcdir) -I$(top_srcdir)/libproxy \
	$(GNOME_INCLUDEDIR)
AM_CXXFLAGS = $(AM_CFLAGS) $(ENCHANT_CFLAGS)
LIBS = @LIBS@ $(top_srcdir)/libproxy/libproxy.a $(EB_LIBS) $(GNOME_LIBDIR) $(GNOME_APPLETS_LIBS) $(ENCHANT_LIBS) -L/usr/local/lib/pth/ $(WIN32_LIBS)
ayttm_LDFLAGS = $(EB_LDFLAGS) -export-dynamic $(WIN32_LD) -lX11
CLEANFILES = @CLEANFILES@ defaults.h
DEFS = @DEFS@ -DLOCALEDIR=\"$(localedir)\" -D_REENTRANT -DIMG_DIR=\"${datadir}/pixmaps/\"

ayttm_LDADD = \
	gtk/libayttmgtk.la \
	$(INTLLIBS) \
	$(GTK_LIBS) \
	@LEXLIB@

bin_SCRIPTS = 

BUILT_SOURCES = defaults.h account_parser.h account_parser.c \
	contact_parser.h contact_parser.c account_scanner.c \
	contact_scanner.c

# Gets rid of the datarootdir warning
datarootdir=@datarootdir@

defaults.h: 
	@rm -f defaults.h >/dev/null 2>&1;
	@echo "/* This file is automatically generated.  Any changes will be overwritten. */" > defaults.h;
	@echo "#ifndef __DEFAULTS_H__" >> defaults.h;
	@echo "#define __DEFAULTS_H__" >> defaults.h;
	@echo "#ifdef __MINGW32__" >> defaults.h;
	@echo \#define MODULE_DIR \"modules\" >> defaults.h;
	@echo \#define AYTTMRC  \"etc\\\\@PACKAGE@rc\" >> defaults.h;
	@echo "#else" >> defaults.h;
	@echo \#define MODULE_DIR \"${libdir}/@PACKAGE@\" >> defaults.h;
	@echo \#define AYTTMRC  \"${sysconfdir}/@PACKAGE@rc\" >> defaults.h;
	@echo "#endif" >> defaults.h;
	@echo "#endif" >> defaults.h;

prefs.$(OBJEXT) plugin.$(OBJEXT): defaults.h

account_parser.h: account_parser.y

account_parser.c: account_parser.y
	$(YACC) $(AM_LFLAGS) $(LFLAGS) -d -p account $< && \
		mv y.tab.c $*.c && \
		mv y.tab.h $*.h

contact_parser.h: contact_parser.y

contact_parser.c: contact_parser.y
	$(YACC) $(AM_LFLAGS) $(LFLAGS) -d -p contact $< && \
		mv y.tab.c $*.c && \
		mv y.tab.h $*.h

account_scanner.c: account_scanner.l
	$(LEX) $(AM_LFLAGS) $(LFLAGS) -i -t -Paccount $< > $@

contact_scanner.c: contact_scanner.l
	$(LEX) $(AM_LFLAGS) $(LFLAGS) -i -t -Pcontact $< > $@

.rc.o:
	@RC@ -I rc -O coff -i $< -o $@
