AM_CFLAGS = $(GTK_CFLAGS) -I$(top_srcdir)/src

EXTRA_DIST = 

pkglib_LTLIBRARIES = import_gaim.la import_gnomeicu.la importlicq.la importicq.la smileysc.la giles_smiles.la 
# msn_smileys.la yahoo_smileys.la

import_gaim_la_SOURCES = import_gaim.c
import_gaim_la_LDFLAGS = -module -avoid-version

import_gnomeicu_la_SOURCES = import_gnomeicu.c
import_gnomeicu_la_LDFLAGS = -module -avoid-version

importicq_la_SOURCES = importicq.c
importicq_la_LDFLAGS = -module -avoid-version

importlicq_la_SOURCES = importlicq.c
importlicq_la_LDFLAGS = -module -avoid-version

smileysc_la_SOURCES = smileysc.c
smileysc_la_LDFLAGS = -module -avoid-version

#msn_smileys_la_SOURCES = msn_smileys.c
#msn_smileys_la_LDFLAGS = -module -avoid-version

#yahoo_smileys_la_SOURCES = yahoo_smileys.c
#yahoo_smileys_la_LDFLAGS = -module -avoid-version

giles_smiles_la_SOURCES = giles_smiles.c
giles_smiles_la_LDFLAGS = -module -avoid-version
