AM_CFLAGS = $(GTK_CFLAGS) -I$(top_srcdir)/src

EXTRA_DIST = 

pkglib_LTLIBRARIES = import_gaim.la import_gnomeicu.la importlicq.la import_everybuddy.la importicq.la 

import_gaim_la_SOURCES = import_gaim.c
import_gaim_la_LDFLAGS = -module -avoid-version

import_gnomeicu_la_SOURCES = import_gnomeicu.c
import_gnomeicu_la_LDFLAGS = -module -avoid-version

importicq_la_SOURCES = importicq.c
importicq_la_LDFLAGS = -module -avoid-version

importlicq_la_SOURCES = importlicq.c
importlicq_la_LDFLAGS = -module -avoid-version

import_everybuddy_la_SOURCES = import_everybuddy.c
import_everybuddy_la_LDFLAGS = -module -avoid-version

