AM_CFLAGS = $(GLIB_CFLAGS) -I$(top_srcdir)/src

EXTRA_DIST = 

pkglib_LTLIBRARIES = notes.la middle.la rainbow.la autotrans.la

notes_la_SOURCES = notes.c
notes_la_LDFLAGS = -module -avoid-version

middle_la_SOURCES = middle.c
middle_la_LDFLAGS = -module -avoid-version

rainbow_la_SOURCES = rainbow.c
rainbow_la_LDFLAGS = -module -avoid-version

autotrans_la_SOURCES = autotrans.c
autotrans_la_LDFLAGS = -module -avoid-version

