noinst_LTLIBRARIES = libayttmgtk.la

libayttmgtk_la_SOURCES = \
	about_window.c extgtktext.c  file_selection_dlg.C \
	gtk_eb_html.c gtkspell.c gtkutils.c \
	log_window.C message_windows.c prefs_window.C

noinst_HEADERS = \
	extgtktext.h \
	gtk_eb_html.h gtkspell.h gtkutils.h

INCLUDES = -I.. $(GTK_CFLAGS)
AM_CXXFLAGS = $(CFLAGS)
