noinst_LTLIBRARIES = libfaim.la

EXTRA_DIST = faim/aim.h faim/aim_cbtypes.h faim/faimconfig.h

libfaim_la_SOURCES = aim_chatnav.c aim_info.c aim_rxhandlers.c \
                    aim_tlv.c aim_auth.c aim_conn.c aim_login.c \
                    aim_rxqueue.c aim_txqueue.c aim_buddylist.c \
                    aim_meta.c aim_logoff.c aim_search.c aim_util.c \
                    aim_chat.c aim_im.c aim_misc.c aim_snac.c \
                    aim_ft.c aim_msgcookie.c md5.c

